# order_service

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 35403d57c57e_add_payments_table.py  7979edaf7d73_change_type_in_tables.py  938b3c64dc40_initial.py  bec8579ee5ea_fix_outbox_case.py  e648c77a44a3_add_inbox_table.py
src/: main.py
src/application/: callback_payment.py  container.py  create_order.py  get_order.py  process_inbox_events.py  process_outbox_events.py
src/config/: settings.py
src/domain/: models.py
src/infrastructure/: catalog_client.py  container.py  db_schema.py  kafka_consumer.py  kafka_producer.py  notification_client.py  payment_client.py  repositories.py  unit_of_work.py
src/presentation/: api.py  container.py  kafka_consumer_worker.py  outbox_worker.py
